--- a/storage/css/static.css
+++ b/storage/css/static.css
@@ -2,7 +2,7 @@
   top: 50%;
   font-family: Poppins;
   color: #4c4c4c;
-  background-image: url("/bgDark.png");
+  background-image: url("bgLight (1).png");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
